[package]
name = "cargo-recon"
version = "0.1.0"
edition = "2024"
authors = ["Jack McPherson <jack@jmcph4.dev>"]
description = "Enumerate viable fuzzing targets in Rust code"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jmcph4/cargo-recon"
keywords = ["cli", "fuzzing", "security", "static-analysis", "rust"]
categories = ["command-line-utilities", "development-tools::testing", "development-tools::debugging", "development-tools::cargo-plugins", "security"]

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
eyre = "0.6.12"
rustdoc-json = "0.9.6"
rustdoc-types = "0.54.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[[bin]]
name = "cargo-recon"
path = "src/main.rs"
